Implement night mode toggle across entire site with dark gradients and proper styling

--- a/tomcom/galleria_personale/galleria.html
+++ b/tomcom/galleria_personale/galleria.html
@@ -167,6 +167,15 @@
     </style>
 </head>
 <body>
+    <div class="night-mode-toggle">
+        <span>☀️</span>
+        <label class="switch">
+            <input type="checkbox" id="nightModeToggle">
+            <span class="slider round"></span>
+        </label>
+        <span>🌙</span>
+    </div>
+
     <div class="lang-switch">
         <span>🇮🇹</span>
         <label class="switch">
@@ -383,5 +392,6 @@
             }
         });
     </script>
+    <script src="../night-mode.js"></script>
 </body>
 </html>
