--- a/tomcom/Biblioteca/login.html
+++ b/tomcom/Biblioteca/login.html
@@ -43,6 +43,15 @@
     </style>
 </head>
 <body>
+    <div class="night-mode-toggle">
+        <span>☀️</span>
+        <label class="switch">
+            <input type="checkbox" id="nightModeToggle">
+            <span class="slider round"></span>
+        </label>
+        <span>🌙</span>
+    </div>
+
     <div class="lang-switch">
         <span>🇮🇹</span>
         <label class="switch">
@@ -80,5 +89,6 @@
     </div>
 
     <script src="validation.js"></script>
+    <script src="../night-mode.js"></script>
 </body>
 </html>
