--- a/tomcom/en/Biblioteca/login.html
+++ b/tomcom/en/Biblioteca/login.html
@@ -42,7 +42,14 @@
         }
     </style>
 </head>
-<body>
+<body>    <div class="night-mode-toggle">
+        <span>☀️</span>
+        <label class="switch">
+            <input type="checkbox" id="nightModeToggle">
+            <span class="slider round"></span>
+        </label>
+        <span>🌙</span>
+    </div>
     <div class="lang-switch">
         <span>🇮🇹</span>
         <label class="switch">
@@ -80,5 +87,6 @@
     </div>
 
     <script src="validation.js"></script>
+    <script src="../../night-mode.js"></script>
 </body>
 </html>
